Fixed horizontal scroll bar issue when shrinking width of window

--- a/less/index.less
+++ b/less/index.less
@@ -77,7 +77,8 @@ html, body {
 	.flex-center();
 	background: @wildsand;
 	flex-direction: column;
-	width: 63rem;
+	max-width: 63rem;
+	width: 100%;
 	margin: 0 auto;
 	font-family: Arial, Helvetica, sans-serif;
 	@media( max-width: 500px ) {
@@ -86,6 +87,7 @@ html, body {
 	 
 	p {
 		font-size:2.2rem;
+		width: 100%;
 	}
 
 	h1 {
@@ -119,9 +121,9 @@ html, body {
 	
 	.top-content {
 		.flex-center();
-
+		
 		.left-intro {
-			width: auto;
+			width: 100%;
 			display: flex;
 			flex-direction: column;
 			justify-content: flex-end;
